--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "fsspec>=2023.1.0",
     "frictionless[json,parquet]>=5.6.3",
     "tomli>=2.0.1",
+    "genson>=1.2.2",
 ]
 # < 3.11 for sqlalchemy-bigquery compatibility
 requires-python = ">=3.10, <3.11"
